changed title name

--- a/uFlow/static/index.html
+++ b/uFlow/static/index.html
@@ -28,7 +28,7 @@
 		<!-- h1 through h6 are headers. The higher the number, the smaller the header -->
 		<!-- p means paragraph -->
 		<div class="jumbotron">
-			<h1>Michael Bernstein</h1>
+			<h1>UFlow...TEST TEST</h1>
 			<p>human-computer interaction &middot; social computing &middot; crowdsourcing</p>
 			<button id="testjs" class="btn btn-primary btn-lg">Test Javascript</button>
 		</div>
